fix: scrollbar styles

--- a/client/src/styles/FingoGlobal.styles.css
+++ b/client/src/styles/FingoGlobal.styles.css
@@ -1,3 +1,9 @@
+:root {
+    --color-background: #f5f5f9;
+    --color-scrollbar: rgb(224, 224, 224);
+    --color-scrollbar-hover: #bbb;
+}
+
 .FingoShapeRadius {
     border-radius: 12px !important;
 }
@@ -6,4 +12,23 @@
     .FingoShapeRadius {
         border-radius: 16px !important;
     }
+}
+
+::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+}
+::-webkit-scrollbar-track,
+::-webkit-scrollbar-corner {
+    background: var(--color-background);
+    border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+    background: var(--color-scrollbar);
+    border-radius: 10px;
+}
+::-webkit-scrollbar-track,
+::-webkit-scrollbar-corner {
+    background: var(--color-background);
+    border-radius: 10px;
 }
